--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div id="root">not rendered</div>
 
     <script type="module" src="index.js"></script>
-
+  
     <script type="module" src="./src/index.js"></script>
+    <script src="https://kit.fontawesome.com/241a5d6954.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
