--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script type="module" src="index.js"></script>
   
-    <script type="module" src="./src/index.js"></script>
+    <script type="module" src="./src/app.js"></script>
     <script src="https://kit.fontawesome.com/241a5d6954.js" crossorigin="anonymous"></script>
 
 </body>
